;;
;; Boussole package
;;
[metadata]
name = boussole
version = 1.5.0
description = Commandline interface to build Sass projects using libsass-python
long_description = file:README.rst
long_description_content_type = text/x-rst
author = David Thenon
author_email = sveetch@gmail.com
url = https://github.com/sveetch/boussole
license = MIT
keywords = Scss, Sass, Libsass, watchdog
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Intended Audience :: Developers
    Topic :: Internet
    Topic :: Software Development :: Compilers
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
install_requires =
    six
    click>=5.1,<6.0
    pathtools
    watchdog
    libsass>=0.18.0
    pyaml
    colorama
    colorlog
packages = find:
zip_safe = True

[options.entry_points]
console_scripts =
    boussole = boussole.cli.console_script:cli_frontend

[options.extras_require]
dev =
    flake8
    pytest
    sphinx
    sphinx-rtd-theme
    sphinx-autobuild

[options.packages.find]
where = .
exclude=
    docs
    tests

[wheel]
universal = 1

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 80
exclude =
    .git,
    .venv,
    build,
    venv,
    __pycache__,

[tool:pytest]
addopts = -vv
python_files =
    *.py
testpaths =
    tests

[tox:tox]
minversion = 3.4.0
envlist = py27, py35

[testenv]

commands =
    pip install -e .[dev]
    pytest -vv tests
